welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:6: error: type mismatch;
 found   : Unit
 required: Int
  if (date>=8){
  ^dateFashion:2: error: type mismatch;
 found   : Unit
 required: Int
  if (you>=8){
  ^